--- a/config/dbs/mysql.yaml
+++ b/config/dbs/mysql.yaml
@@ -9,6 +9,17 @@ servers:
         spec:
           template:
             spec:
+              initContainers:
+                - command:
+                    [
+                      "sh",
+                      "-c",
+                      "until nslookup [[.KieName]]-mysql && nc -vz [[.KieName]]-mysql 3306; do echo waiting for [[.KieName]]-mysql; sleep 2; done;",
+                    ]
+                  image: busybox
+                  imagePullPolicy: IfNotPresent
+                  name: "[[.KieName]]-mysql-init"
+                  terminationMessagePolicy: FallbackToLogsOnError
               containers:
                 - name: "[[.KieName]]"
                   env:
