[RHPAM-1952] resolve an intermittent issue may occur during the KIE server DC rollout due to sticky session
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/common.yaml
+++ b/config/common.yaml
@@ -434,6 +434,7 @@ servers:
         spec:
           strategy:
             rollingParams:
+              maxSurge: 100%
               maxUnavailable: 0
             type: Rolling
           triggers:
