--- a/config/dbs/h2.yaml
+++ b/config/dbs/h2.yaml
@@ -7,6 +7,8 @@ servers:
       - metadata:
           name: "[[.KieName]]"
         spec:
+          strategy:
+            type: Recreate
           template:
             metadata:
               name: "[[.KieName]]"
