--- a/deploy/catalog_resources/community/kiecloud.package.yaml
+++ b/deploy/catalog_resources/community/kiecloud.package.yaml
@@ -1,5 +1,5 @@
-#! package-manifest: deploy/catalog_resources/community/kiecloud-operator.v1.0.0.clusterserviceversion.yaml
+#! package-manifest: deploy/catalog_resources/community/kiecloud-operator.1.0.0.clusterserviceversion.yaml
 packageName: kiecloud-operator
 channels:
   - name: beta
-    currentCSV: kiecloud-operator.v1.0.0
+    currentCSV: kiecloud-operator.1.0.0
