--- a/deploy/catalog_resources/redhat/businessautomation.package.yaml
+++ b/deploy/catalog_resources/redhat/businessautomation.package.yaml
@@ -1,5 +1,5 @@
-#! package-manifest: deploy/catalog_resources/redhat/businessautomation-operator.v1.0.0.clusterserviceversion.yaml
+#! package-manifest: deploy/catalog_resources/redhat/businessautomation-operator.1.0.0.clusterserviceversion.yaml
 packageName: businessautomation-operator
 channels:
   - name: beta
-    currentCSV: businessautomation-operator.v1.0.0
+    currentCSV: businessautomation-operator.1.0.0
