--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -145,6 +145,9 @@ spec:
                       name:
                         type: string
                         description: Server name
+                      id:
+                        type: string
+                        description: Server ID
                       deployments:
                         type: integer
                         format: int
