--- a/config/common.yaml
+++ b/config/common.yaml
@@ -42,18 +42,20 @@ console:
                   limits:
                     memory: 2Gi
                 livenessProbe:
-                  httpGet:
-                    path: /rest/healthy
-                    port: 8080
-                    scheme: HTTP
+                  exec:
+                    command:
+                      - "/bin/bash"
+                      - "-c"
+                      - curl --fail --silent -u "${KIE_ADMIN_USER}":"${KIE_ADMIN_PWD}" http://localhost:8080/[[.Console.ProbePage]]
                   initialDelaySeconds: 180
                   timeoutSeconds: 2
                   periodSeconds: 15
                 readinessProbe:
-                  httpGet:
-                    path: /rest/ready
-                    port: 8080
-                    scheme: HTTP
+                  exec:
+                    command:
+                      - "/bin/bash"
+                      - "-c"
+                      - curl --fail --silent -u "${KIE_ADMIN_USER}":"${KIE_ADMIN_PWD}" http://localhost:8080/[[.Console.ProbePage]]
                   initialDelaySeconds: 60
                   timeoutSeconds: 2
                   periodSeconds: 30
@@ -607,19 +609,21 @@ servers:
                     limits:
                       memory: 1Gi
                   livenessProbe:
-                    httpGet:
-                      path: /services/rest/server/healthcheck
-                      port: 8080
-                      scheme: HTTP
+                    exec:
+                      command:
+                        - "/bin/bash"
+                        - "-c"
+                        - curl --fail --silent -u "${KIE_ADMIN_USER}":"${KIE_ADMIN_PWD}" http://localhost:8080/services/rest/server/healthcheck
                     initialDelaySeconds: 180
                     timeoutSeconds: 2
                     periodSeconds: 15
                     failureThreshold: 3
                   readinessProbe:
-                    httpGet:
-                      path: /services/rest/server/readycheck
-                      port: 8080
-                      scheme: HTTP
+                    exec:
+                      command:
+                        - "/bin/bash"
+                        - "-c"
+                        - curl --fail --silent -u "${KIE_ADMIN_USER}":"${KIE_ADMIN_PWD}" http://localhost:8080/services/rest/server/readycheck
                     initialDelaySeconds: 60
                     timeoutSeconds: 2
                     periodSeconds: 30
