--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ build/_output/
 build/_test/
 target/
 *-packr.go
+*.tar.gz
 
 # Created by https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 ### Emacs ###
